poster and viz stuff

--- a/poster/cs229-poster.tex
+++ b/poster/cs229-poster.tex
@@ -127,7 +127,7 @@
 % Watch out for hyphenation in titles - LaTeX will do it
 % but it looks awful.
 \begin{textblock}{23}(0,0)
-\Title{Player Behavior and Optimal Team Composition in Online Games}
+\Title{Player Behavior and Optimal Team Compositions in Online Games}
 \end{textblock}
 
 \begin{textblock}{23}(0,0.6)
@@ -230,7 +230,7 @@ Mark Peng
 
 \medskip
 \hrule\medskip
-\Head{Target Online Game}
+\Head{Target Game}
 
 \begin{multicols}{2}
   \begin{itemize}
@@ -262,13 +262,13 @@ Mark Peng
 
 \begin{itemize}
   
-  \item \textbf{Features} are team compositions for each team in a game based on official game guide's clustering information
+  \item \textbf{Features} are team compositions for each team in a game based on official game guide's clustering information (each character is mapped to a play style)
 
   \item \textbf{Logistic regression} with 10\% hold-out cross validation
   
-  \item \textbf{Data samples} with 120,000 train and validation and 12,000 test samples
+  \item \textbf{Data samples} with 120,000 training samples and 12,000 test samples
   
-  \item \textbf{Accuracy} of ??\% on test samples
+  \item \textbf{Poor accuracy} of 55.1\% on training samples, 54.4\% on test samples
 
 \end{itemize}
 
