added final paper files

--- a/poster/cs229-poster.tex
+++ b/poster/cs229-poster.tex
@@ -469,7 +469,7 @@ Mark Peng
 
 \medskip
 \hrule\medskip
-\Head{Acknowledgements}
+\Head{Acknowledgments}
 
 We thank Professor Andrew Ng and the instructor team.
 
